packages/svelte/test/validator/samples/error-mode-warn/input.svelte
<script>
	const dummy = 'foo';
</script>

<input bind:value={dummy}>
<input bind:value={undeclared}>
