packages/svelte/test/compiler-errors/samples/component-slot-duplicate-error-3/main.svelte
<script>
	import Nested from './irrelevant';
</script>

<Nested>
	<svelte:fragment slot="foo">{value}</svelte:fragment>
	<p slot="foo">{value}</p>
</Nested>